--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
  "name":"Heroku-Javascript-Server",
   "version":"1.0.0",
   "description":"",
-  "main":"index.js"
+  "main":"index.js",
   "scripts": {
     "start": "node server.js"
   },
